--- a/client/testPushApi/index.html
+++ b/client/testPushApi/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="theme-color" content="blue">
   <title>Document</title>
+  <!-- <link rel="manifest" href="./manifest.json"> -->
 </head>
 
 <body>
